// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch Matches snapshot (desktop) 1`] = `
[
  .c2 {
  background: #FFFFFF;
  border-radius: 100%;
  box-sizing: border-box;
  height: 1rem;
  position: absolute;
  right: calc(100% - 1.1875rem);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1rem;
}

.c0 {
  background: #008533;
  border: 1px solid #008533;
  border-radius: 0.75rem;
  height: var(--size-1halfx);
  position: relative;
  vertical-align: middle;
  width: var(--size-2halfx);
}

.c0:not([disabled]) {
  cursor: pointer;
}

.c0[aria-checked='false'] {
  background: #B7BBC2;
  border-color: #B7BBC2;
}

.c0[aria-checked='false'] .c1 {
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c0[aria-checked='true'] > .c1 {
  right: 3px;
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c0:disabled {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

.c0:disabled[aria-checked='true'] {
  background: #8ADDA9;
  border-color: #8ADDA9;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
    aria-checked="true"
    aria-labelledby="uuid1"
    aria-readonly="false"
    class="c0"
    data-testid="toggle-switch"
    id="uuid2"
    role="switch"
    type="button"
  >
    <span
      class="c1 c2"
    />
  </button>,
  .c0 {
  cursor: pointer;
  color: #000000;
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin-left: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="c0"
    for="uuid2"
    id="uuid1"
  >
    Switch
  </label>,
]
`;

exports[`ToggleSwitch Matches snapshot (mobile) 1`] = `
[
  .c2 {
  background: #FFFFFF;
  border-radius: 100%;
  box-sizing: border-box;
  height: 1.375rem;
  position: absolute;
  right: calc(100% - 1.625rem);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.375rem;
}

.c0 {
  background: #008533;
  border: 1px solid #008533;
  border-radius: 1rem;
  height: var(--size-2x);
  position: relative;
  vertical-align: middle;
  width: var(--size-3x);
}

.c0:not([disabled]) {
  cursor: pointer;
}

.c0[aria-checked='false'] {
  background: #B7BBC2;
  border-color: #B7BBC2;
}

.c0[aria-checked='false'] .c1 {
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c0[aria-checked='true'] > .c1 {
  right: 4px;
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c0:disabled {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

.c0:disabled[aria-checked='true'] {
  background: #8ADDA9;
  border-color: #8ADDA9;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
    aria-checked="true"
    aria-labelledby="uuid1"
    aria-readonly="false"
    class="c0"
    data-testid="toggle-switch"
    id="uuid2"
    role="switch"
    type="button"
  >
    <span
      class="c1 c2"
    />
  </button>,
  .c0 {
  cursor: pointer;
  color: #000000;
  font-size: 1rem;
  line-height: 2rem;
  margin-left: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="c0"
    for="uuid2"
    id="uuid1"
  >
    Switch
  </label>,
]
`;

exports[`ToggleSwitch has disabled styles 1`] = `
[
  .c2 {
  background: #FFFFFF;
  border-radius: 100%;
  box-sizing: border-box;
  height: 1rem;
  position: absolute;
  right: calc(100% - 1.1875rem);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1rem;
}

.c0 {
  background: #008533;
  border: 1px solid #008533;
  border-radius: 0.75rem;
  height: var(--size-1halfx);
  position: relative;
  vertical-align: middle;
  width: var(--size-2halfx);
}

.c0:not([disabled]) {
  cursor: pointer;
}

.c0[aria-checked='false'] {
  background: #B7BBC2;
  border-color: #B7BBC2;
}

.c0[aria-checked='false'] .c1 {
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c0[aria-checked='true'] > .c1 {
  right: 3px;
  -webkit-transition: right 0.1s ease-in-out;
  transition: right 0.1s ease-in-out;
}

.c0:disabled {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

.c0:disabled[aria-checked='true'] {
  background: #8ADDA9;
  border-color: #8ADDA9;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
    aria-checked="true"
    aria-labelledby="uuid1"
    aria-readonly="true"
    class="c0"
    data-testid="toggle-switch"
    disabled=""
    id="uuid2"
    role="switch"
    type="button"
  >
    <span
      class="c1 c2"
    />
  </button>,
  .c0 {
  color: #000000;
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin-left: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="c0"
    disabled=""
    for="uuid2"
    id="uuid1"
  >
    Switch
  </label>,
]
`;
